style, feat: 목록, 지도 Tab 이동

--- a/src/main/reactjs/src/styles/_utils.scss
+++ b/src/main/reactjs/src/styles/_utils.scss
@@ -18,3 +18,9 @@
 @mixin font-style {
   font-family: 'HakgyoansimWoojuR', sans-serif;
 }
+
+@mixin tabButton {
+  background-color: #fff5cd;
+  width: 45%;
+  line-height: 50px;
+}
